--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
       <a href="#home">HOME</a>
       <a href="#about">ABOUT</a>
+      <a href="#contact">CONTACT</a>
       <a href="#products">PRODUCTS</a>
     </nav>
     <div id="app">
